# learnLLM

./: README.md  build_makemore_backprop_ninja.ipynb  main.py  micrograd_exercises.ipynb  package-lock.json  pyproject.toml
.ipynb_checkpoints/: build_makemore_backprop_ninja-checkpoint.ipynb
micrograd/: engine.py  nn.py  test.py
nn-zero-to-hero/lectures/makemore/: makemore_part2_mlp.ipynb
